# rsomics-bed-summary

./: Cargo.toml
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: genome.txt  input.bed  malformed_negative.bed  malformed_start_gt_end.bed  small.bed  small_genome.txt  small_summary.tsv  summary.tsv
