[package]
name = "rsomics-bed-summary"
version = "0.1.0"
description = "Statistical summary of BED intervals per chromosome — Rust port of bedtools summary"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-bed-summary"
path = "src/main.rs"

[lib]
name = "rsomics_bed_summary"
path = "src/lib.rs"

doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
